2006-10-25  Graham Percival  <gpermus@gmail.com>

	* Diocumentation/user/instrument-notation.itely: added more
	info about stanzas; thanks Geoff!

	* Documentation/user/ {basic, advanced}: small fixes from
	mailist.

	* THANKS: add some bug reporters.

2006-10-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/define-context-properties.scm (all-user-translation-properties):
	noteToFretFunction: Add.

	* scm/define-grobs.scm (all-grob-descriptions): FretBoard: use
	fret-diagram-interface (WAS: fret-board-interface).  Fixes build.

2006-10-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/file-name.cc (dos_to_posix): Help std::string.copy with
	trailing zero.

	* GNUmakefile.in ($(tree-share-prefix)/mf-link-tree link-mf-tree):
	Remove bashism in delete.

2006-10-25  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/define-grobs.scm (all-grob-descriptions): set finger-code.

	* scm/translation-functions.scm (determine-frets-mf): flatten let*

	* scm/define-context-properties.scm
	(all-user-translation-properties): add maximumFretStretch property.

	* scm/translation-functions.scm (tunings): read and use maximumFretStretch.

	* lily/source-file.cc (get_counts): use multibyte variable.

	* scm/translation-functions.scm (determine-frets-mf): new
	function: compute fret numbers. 

	* scm/output-lib.scm (string-frets->description) new function.
	(fret-board::calc-stencil): new function

	* scm/fret-diagrams.scm (fret-diagram-verbose): update doc string.

	* scm/define-grobs.scm (all-grob-descriptions): add FretBoard grob. 

	* lily/include/lily-guile.hh (ly_cxx_vector_to_list): new function.

	* lily/tab-note-heads-engraver.cc: cleanups.

	* lily/fretboard-engraver.cc: new file

	* ly/engraver-init.ly: add FretBoards context

2006-10-24  Joe Neeman  <joeneeman@gmail.com>

	* lily/grob.cc (pure_relative_y_coordinate)
	(pure_height): use the new call_pure_function stuff

	* lily/grob-property.cc (call_pure_function): wrapper for the scheme
	call-pure-function
