@@ -1135,20 +1135,6 @@ only allow turns in repeats whose duration is longer than this value.
 
 @refbugs
 
-The @code{Page_turn_engraver} does not respect time-scaled music. For example, the
-following example does not behave as expected:
-
-@example
-\new Staff \with @{ \consists "Page_turn_engraver" @}
-@{
-  a4 b c d |
-  R1 | % a page turn will be allowed here
-  a4 b \times 2/3 @{c d e@} |
-  R1 | % a page turn will NOT be allowed here
-  a1
-@}
-@end example
-
 There should only be one @code{Page_turn_engraver} in a score. If there is more
 than one, they will interfere with each other.
 
